# yet-another-markdown-viewer

./: .gitignore  CHANGELOG.md  README.md  index.html  package-lock.json  package.json  test-perf.md  vite.config.js
.github/workflows/: release.yml
.serena/: project.yml
.serena/memories/: codebase_structure.md  project_overview.md  style_and_conventions.md  suggested_commands.md  task_completion_checklist.md
docs/plans/: 2026-03-06-yamv-design.md  2026-03-06-yamv-implementation.md
scripts/: build-macos.sh
src/: main.js  renderer.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/extensions/quicklook/: Info.plist  PreviewViewController.swift  build.sh  inject.sh
src-tauri/extensions/quicklook/YAMVQuickLook.xcodeproj/: project.pbxproj
src-tauri/extensions/quicklook/resources/: build-renderer.js  mermaid-entry.js  renderer-entry.js  styles.css
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/styles/: base.css  github-dark.css  github-light.css
test/: sample.md
