[package]
name = "yamv"
version = "0.9.0"
description = "Yet Another Markdown Viewer"
authors = []
edition = "2021"

[lib]
name = "yamv_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-window-state = "2"
tauri-plugin-store = "2"
tauri-plugin-cli = "2"
tauri-plugin-updater = "2"
tauri-plugin-deep-link = "2"
tauri-plugin-log = "2"
tauri-plugin-process = "2"
tauri-plugin-os = "2"
log = "0.4"
notify-debouncer-mini = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[target.'cfg(target_os = "macos")'.dependencies]
core-foundation = "0.10"
